--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.11.6"
+    runtime "postgresql:postgresql:9.0-801.jdbc4"
     runtime "com.h2database:h2"
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
@@ -58,3 +59,6 @@ assets {
     minifyJs = true
     minifyCss = true
 }
+
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
